# iat-crypto-project

step-1/: Cargo.toml  README.md
step-1/src/: client.rs  message.txt  server.rs
step-2/: Cargo.toml
step-2/src/: client.rs  client_message.rs  mitm.rs
task-1/: Cargo.toml  README.md
task-1/src/: client.rs  server.rs
task-2/: Cargo.toml  README.md
task-2/src/: client.rs  client_message.rs  malicious_message.txt  mitm.rs  server.rs
task-3/: Cargo.toml  README.md
task-3/src/: client.rs  client_message.rs  mitm.rs  server.rs
task-4/: README.md
task-4/src/: client.rs  client_message.rs  encrypted_message.rs  mitm.rs  server.rs
task-5/: Cargo.toml  README.md
task-5/src/: ca.rs  certificate.rs  certificate_request.rs  client.rs  server.rs
