[package]
name = "step-1"
version = "0.1.0"
edition = "2021"

# Targets
[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "mitm"
path = "src/mitm.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
md2 = "0.10.2"
serde_json = "1.0"
hex = "0.4.3"
bincode = "2.0.1"
